--- a/YLMES/Views/TaskManagement/AddPur.cshtml
+++ b/YLMES/Views/TaskManagement/AddPur.cshtml
@@ -85,6 +85,11 @@
         </div>
     </div>
     <script>  
+        $(function () {
+            if ('@Session["name"]' == "") {
+                window.top.location = '/Home/Login';
+            }
+        });
             layui.use(['layer', 'form', 'jquery'], function () {
                 var form = layui.form, layer = layui.layer, $ = layui.jquery;
                 form.render();
